--- a/module4-logistic-regression/LS_DS_214.ipynb
+++ b/module4-logistic-regression/LS_DS_214.ipynb
@@ -1533,15 +1533,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b29b55e2-d6e8-408f-c4eb-5c2466609f95"
+        "outputId": "8cf045d4-460d-4445-a621-9995357e222d"
       },
       "source": [
-        "imputer = SimpleImputer()\n",
+        "imputer = SimpleImputer(strategy='mean')\n",
         "X_train_imp = imputer.fit_transform(X_train_enc)\n",
         "X_val_imp = imputer.transform(X_val_enc)\n",
         "X_train_imp.shape, X_val_imp.shape"
       ],
-      "execution_count": 69,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1553,7 +1553,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 69
+          "execution_count": 84
         }
       ]
     },
@@ -1609,12 +1609,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "10566cf1-28d1-4248-c9af-8d8bc6099df8"
+        "outputId": "7068644d-ee62-4d65-9735-8cfc887d8683"
       },
       "source": [
         "X_train_sc.head()"
       ],
-      "execution_count": 74,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1740,7 +1740,151 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 74
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kf5-4K_A8elu",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "adc638e8-7d43-48e2-d071-55a90d27f59b"
+      },
+      "source": [
+        "model = LogisticRegressionCV()\n",
+        "model.fit(X_train_sc, y_train)"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegressionCV(Cs=10, class_weight=None, cv=None, dual=False,\n",
+              "                     fit_intercept=True, intercept_scaling=1.0, l1_ratios=None,\n",
+              "                     max_iter=100, multi_class='auto', n_jobs=None,\n",
+              "                     penalty='l2', random_state=None, refit=True, scoring=None,\n",
+              "                     solver='lbfgs', tol=0.0001, verbose=0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Oqb_1wy8ldA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "47056acc-1a67-407b-9735-5e86f13779bd"
+      },
+      "source": [
+        "print(f'Validation score: {model.score(X_val_sc, y_val)}')"
+      ],
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation score: 0.7937219730941704\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-rLaZvYw9iPR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "7f485e5b-5ec0-4bbd-8691-8523961518fd"
+      },
+      "source": [
+        "coefs = pd.Series(model.coef_[0], X_train_sc.columns)\n",
+        "coefs"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pclass         -0.608062\n",
+              "Sex_male       -0.560975\n",
+              "Sex_female      0.560975\n",
+              "Age            -0.338739\n",
+              "SibSp          -0.273022\n",
+              "Parch          -0.036671\n",
+              "Fare            0.117568\n",
+              "Embarked_S     -0.090014\n",
+              "Embarked_C      0.079461\n",
+              "Embarked_Q      0.019548\n",
+              "Embarked_nan    0.075159\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_lpKu8J_9tlP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 282
+        },
+        "outputId": "1d230af6-912b-4fd6-994f-dbaaca42837e"
+      },
+      "source": [
+        "coefs.sort_values().plot.barh()"
+      ],
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f838d1f3c88>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 99
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAbEAAAD4CAYAAABi8NihAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjAsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8GearUAAAgAElEQVR4nO3dfZhdZX3u8e+dBASJBJSIaYtOqiEt\nYIzJJoJVeVE59WAVNBiUivRgArTl9PJctOYcOBYUVMpVrIIiUVostbxqKsdQwmvkRYTshJAIyquI\nCOpgawqIUZP7/LGfke3OzOx537Nm7s91zTV7rfWsZ/2eGcgvz7NW1k+2iYiIqKIpnQ4gIiJiqJLE\nIiKispLEIiKispLEIiKispLEIiKisqZ1OoCJbo899nBXV1enw4iIqJR169Y9ZXtmu3ZJYqOsq6uL\ner3e6TAiIipF0vcH0i7LiRERUVlJYhERUVlJYhERUVm5JxYR2+lavqrTIcQE8OgnDx/1a2QmFhER\nlZUkFhERlTUmSUzSqZLulbRR0gZJrxuhfo+S9B1JN49Ef31c4zhJ549W/xERMXSjfk9M0oHA24EF\ntrdI2gPYcYS6Px5Yavu2EeovIiIqZCxmYrOAp2xvAbD9lO0nJC2U9A1J6yStljRL0gxJ90uaCyDp\nUklLe+tU0keANwAXSTpH0tTyfW2Z8Z1Q2h1crvM1SY9I+qSkYyTdJWmTpFeWdn8i6U5Jd0u6QdKe\nvVxzpqSvlGuslfRHfcS2TFJdUr27u3tEfogREbG9sUhi1wF7SXpA0uckHSRpB+A8YLHthcA/AmfZ\n3gz8JXCxpKOB3W1/obdObX8UqAPH2P5rGrOyzbb3B/YHlkqaXZq/BjgR+EPg/cDethcBXwROLm1u\nAw6w/VrgMuBvernsp4FPlWu8u5zfW2wrbNds12bObPvWlIiIGKJRX060/YykhcAbgUOAy4Ezgf2A\n6yUBTAWeLO2vl3QU8FkayWegDgPmSVpctmcAc4BfAmttPwkg6WEaiRVgU4kJ4PeAyyXNorHc+b1e\nrvEWYJ8SM8CukqbbfmYQcUZExAgZk38nZnsrsAZYI2kT8BfAvbYPbG0raQqNGdPPgd2Bxwd4GQEn\n217d0t/BwJamXduatrfx/M/gPOBc21eXc07v5RpTaMzWfjHAmCIiYhSN+nKipLmS5jTtmg98B5hZ\nHvpA0g6S9i3HP1SOvw/4p7L0OBCrgZN62kvaW9Iugwh1BvDD8vkDfbS5jueXH5E0fxD9R0TECBuL\nmdh04DxJuwG/Bh4ClgErgM9ImlHi+AdJvwY+CCyy/bSkW4DTgL8dwHW+CHQB69VY7+sGjhhEnKcD\nV0r6T+AmYHYvbf4n8FlJG0vMt9C41xYxoYzFmxYiRoJsdzqGCa1WqzmlWCIiBkfSOtu1du3yxo6I\niKisSrwAWNKdwAtadr/f9qZOxBMREeNDJZKY7RF5TVVEREwsWU6MiIjKShKLiIjKShKLiIjKShKL\niIjKShKLiIjKqsTTiRExtrqWr+rIdfOmkBiszMQiIqKyJuVMTNJWGmVYehxh+9EOhRMREUM0KZMY\n8JztQb2BvrxUWLa3jVJMERExSFlOBCRNl3SjpPWSNkl6Z9nfJel+Sf8MfJtGheq/lrRW0kZJZ3Q2\n8oiIyW2yJrGdJW0oXyuBXwBH2l5Ao9Lz3+v58s1zgM/Z3heYW7YX0aiLtlDSm1o7l7RMUl1Svbu7\ne0wGFBExGWU5kUZRTuDjJSFtA34X2LMc/r7tb5XPh5Wvu8v2dBpJ7Zbmzm2voFEvjVqtllo3ERGj\nZLImsVbHADOBhbZ/JelRYKdy7NmmdgI+YfvCMY4vIiJ6MVmXE1vNAH5SEtghwCv6aLca+B+SpgNI\n+l1JLx2rICMi4rdlJtbwZeD/SdoE1IHv9tbI9nWS/hC4o9wyewb4U+AnYxVoREQ8T3Zu2YymWq3m\ner3e6TAiIipF0jrbtXbtspwYERGVlSQWERGVlSQWERGVlSQWERGVlSQWERGVlSQWERGVlSQWERGV\nlSQWERGVlSQWERGVlddORcR2upavGvE+H/3k4SPeZ0RmYhERUVlJYhERUVkjnsQkbW2qmrxB0vJB\nnHuwpK8P8/prJLV9aWQf514saXE/x3eQ9ElJD0paL+kOSW8berQRETEco3FP7LeqJo8lSVNH+RIf\nA2YB+9neImlP4KBRvmZERPRhzJYTJT0q6RNldlaXtEDSakkPSzqxqemuklZJul/S5yVNKedfUM67\nV9IZLf2eLWk9cFTT/illZnWmpKmSzpG0VtJGSSeUNpJ0frnWDUCfBS4lvRBYCpxsewuA7R/bvqKX\ntstKrPXu7u5h/uQiIqIvo5HEdm5ZTlzSdOyxMku7FbgYWAwcAJzR1GYRcDKwD/BK4F1l/6mltsw8\n4CBJ85rO+antBbYvK9vTaBS6fND2acDxwGbb+wP7A0slzQaOBOaWax0LvL6fcb2qxP9f7X4AtlfY\nrtmuzZw5s13ziIgYorFeTry6fN8ETLf9NPC0pC2SdivH7rL9CICkS4E3AFcB75G0rMQ8i0bi2VjO\nubzlOhcCV9g+q2wfBsxrut81A5gDvAm41PZW4AlJNw1tyBER0Qlj/XTilvJ9W9Pnnu2ehNpaatpl\n1nQK8Gbb84BVwE5NbZ5tOeebwCGSetqIxjLg/PI12/Z1g4z9IeDlknYd5HkRETFKxuMj9oskzS73\nwpYAtwG70khUm8vDFO2eCLwIuAa4QtI0YDVwkqQdACTtLWkX4BZgSblnNgs4pK8Obf+89PtpSTuW\nfmZKOqqvcyIiYnSNxnLizpI2NG1fa3vAj9kDa4HzadyDuhlYaXubpLuB7wI/AG5v14ntcyXNAC4B\njgG6gPWSBHQDRwArgUOB+4DHgDvadHsacCZwn6Rf0EisHxnE2CIqIW/XiKqQ3bp6FyOpVqu5Xq93\nOoyIiEqRtK48zNev8bicGBERMSB5AXAvJK0EZrfs/rDt1Z2IJyIiepck1gvbR3Y6hoiIaC/LiRER\nUVlJYhERUVlJYhERUVlJYhERUVlJYhERUVl5OjEittO1fNWI9ZW3f8RoykwsIiIqq20Sk7S1pT7Y\ngN+DKOlgSV8fToCS1khq++qRPs69uKn8SkRETDADWU7srz7YqJI0tRPXjYiIahjycqKkRyV9oszO\n6pIWSFot6WFJJzY13VXSKkn3S/p8KbGCpAvKefdKOqOl37MlrQeOato/pcysziylU86RtFbSRkkn\nlDaSdH651g3ASwcwhjMkrZe0SdIflP2LJN0h6W5J35Q0t+w/TtJXJV0r6UFJfzfUn19ERAzfQJLY\nzi3LiUuajj1WZmm3AhcDi4EDgDOa2iwCTqZRifmVwLvK/lPLG4rnAQdJmtd0zk9tL7B9WdmeBnwZ\neND2acDxwGbb+wP7A0tL4cwjgbnlWscCrx/A+J6yvQC4gEbhTWiUfHmj7dfSKLXy8ab282nUOXs1\njVpke7V2KGlZSdD17u7uAYQQERFDMdzlxKvL903AdNtPA09L2iJpt3LsLtuPAEi6FHgDcBXwHknL\nSgyzaCSejeWcy1uucyFwhe2zyvZhwLym+10zgDnAm4BLbW8FnpB00wDG99XyfR3PJ9gZwJckzaFR\naXqHpvY32t5cxnMf8AoaNc5+w/YKYAU0SrEMIIaIiBiC4T6duKV839b0uWe7J0G2/iHuMms6BXiz\n7XnAKmCnpjbPtpzzTeAQST1tBJxse375mm37umGOYWtTzB8Dbra9H/AnLbE1j7P5nIiIGGNj8Yj9\nIkmzy72wJcBtwK40EtVmSXsCb2vTx0XANcAVkqYBq4GTJO0AIGlvSbsAt9BY4psqaRZwyBBjngH8\nsHw+boh9RETEKBvILGJnSRuatq+1PeDH7IG1wPnAq4CbgZW2t0m6m8a9px8At7frxPa5kmYAlwDH\nAF3AekkCuoEjgJXAocB9wGPAHYOIs9nf0VhOPI3GLDFiUsk/UI6qkJ1bNqOpVqu5Xq93OoyIiEqR\ntK48/NevvLEjIiIqa1I8lCBpJTC7ZfeHba/uRDwRETEyJkUSs31kp2OIiIiRl+XEiIiorCSxiIio\nrCSxiIiorCSxiIiorCSxiIiorEnxdGJEDE7X8u1fVJO3eMR4lJlYRERUVpJYRERU1ogmMUlbWwpo\nDvhFwZIOlvT1YV5/jaS279rq49yLm+qT9XZ8R0n/IOmh8vV1SS8ferQRETFcI31PrL8CmqNK0tRR\nvsTHgRcBc21vlfRnwNckLbS9bZSvHRERvRiT5URJj0r6RJmd1SUtkLRa0sOSTmxququkVZLul/T5\nUoMMSReU8+6VdEZLv2dLWg8c1bR/SplZnVlqi50jaa2kjZJOKG0k6fxyrRuAl/YT/wuBPwM+VKpG\nY/ufgGeAt/TSflmJt97d3T2sn11ERPRtpJPYzi3LiUuajj1WZmm3AhcDi4EDgDOa2iwCTgb2AV4J\nvKvsP7W8kn8ecJCkeU3n/NT2AtuXle1pwJeBB22fBhwPbLa9P7A/sLRUlj4SmFuudSzw+n7G9aoS\n/3+17K+X83+L7RW2a7ZrM2fO7KfbiIgYjrFcTry6fN8ETLf9NPC0pC2SdivH7rL9CICkS4E3AFcB\n75G0rMQ7i0bi2FjOubzlOhcCV9g+q2wfBsxrut81A5gDvAm4tMysnpB009CGHBERnTKWTyduKd+3\nNX3u2e5Jpq0VOl1mTacAb7Y9j0al5Z2a2jzbcs43gUMk9bQRcLLt+eVrtu3rBhn7w8DLJb2oZf9C\nGrOxiIjogPH2iP0iSbPLvbAlwG3ArjQS1WZJewJva9PHRcA1wBWSpgGrgZMk7QAgaW9JuwC3AEvK\nPbNZwCF9dWj7WeBLwLk9D5BIOhb4BXD70IcbERHDMdLLiTtL2tC0fa3tAT9mD6wFzqdxD+pmYKXt\nbZLuBr4L/IABJA3b50qaAVwCHAN0AeslCegGjgBWAocC9wGPAXe06fZ/A+cA90vaufRzoO3W2WNE\n5eXtHFEVyp/BgyfpZcC/AxfYXtFf21qt5no9K44REYMhaV15oK9feXfiENj+EfDaTscRETHZJYm1\nkLQSmN2y+8O2V3cinoiI6FuSWAvbR3Y6hoiIGJjx9nRiRETEgCWJRUREZSWJRUREZSWJRUREZSWJ\nRUREZeXpxIhJpGv5qgG1yxs7oioyE4uIiMqa0ElM0tZS1+zbkq4sxS2H01+XpG+PVHwRETE8EzqJ\nUeqb2d4P+CVwYrsTAMrb7yMiYpyb6Ems2a3AqyT9iaQ7Jd0t6YZS3gVJp0u6RNLtwCWS9pS0UtI9\n5aun8vNUSV+QdK+k68ob7SMiogMmRRIrM6u30agqfRtwgO3XApcBf9PUdB/gLbbfC3wG+Ibt1wAL\ngHtLmznAZ23vC/wMeHcv11smqS6p3t3dPVrDioiY9Cb6sllzfbNbaRTMnAtcXgph7gh8r6n91baf\nK58PBY4FsL2VRlHO3YHv2e7pcx2NWmW/pZRnWQGNUiwjOqKIiPiNiZ7EnrM9v3mHpPOAc21fLelg\n4PSmw88OoM8tTZ+3AllOjIjokEmxnNhiBvDD8vkD/bS7ETgJQNLUUik6IiLGkcmYxE4HrpS0Dniq\nn3Z/BRwiaRONZcN9xiC2iIgYBNm5ZTOaarWa6/V6p8OIiKgUSets19q1m4wzsYiImCCSxCIiorKS\nxCIiorKSxCIiorKSxCIiorKSxCIiorKSxCIiorKSxCIiorKSxCIiorIm+guAIyakruWrRrX/Rz95\n+Kj2HzFSMhOLiIjKShKLiIjKGpUkJmmrpA1NX8sHce7Bkr4+zOuvkdT2xZF9nHuxpMX9HH+7pLsl\n3SPpPkknDD3SiIgYjtG6J7ZdMcqxImnqKPa9A42KzYtsPy7pBfRS2TkiIsbGmC4nSnpU0ifK7Kwu\naYGk1ZIelnRiU9NdJa2SdL+kz0uaUs6/oJx3r6QzWvo9W9J64Kim/VPKzOrMUtjyHElrJW3smUGp\n4fxyrRuAl/YzhBfRSPw/BbC9xfb9vYxzWYmz3t3dPZwfWURE9GO0ktjOLcuJS5qOPVZmabcCFwOL\ngQOAM5raLAJOplGI8pXAu8r+U0t9mXnAQZLmNZ3zU9sLbF9WtqcBXwYetH0acDyw2fb+wP7AUkmz\ngSOBueVaxwKv72tQtv8DuBr4vqRLJR3Tk2Bb2q2wXbNdmzlzZrufVUREDFEnlhOvLt83AdNtPw08\nLWmLpN3KsbtsPwIg6VLgDcBVwHskLStxz6KReDaWcy5vuc6FwBW2zyrbhwHzmu53zQDmAG8CLrW9\nFXhC0k39Dcz2ByW9GngLcArwVuC4/s6JiIjR0YmnE7eU79uaPvds9yTV1nLTLrOmU4A3254HrAJ2\namrzbMs53wQOkdTTRsDJtueXr9m2rxvKAGxvsv0pGgns3UPpIyIihm+8PmK/SNLsslS3BLgN2JVG\notosaU/gbW36uAi4BrhC0jRgNXBSeTgDSXtL2gW4BVhS7pnNAg7pq0NJ0yUd3LRrPvD9IY0wIiKG\nbbSWE3eWtKFp+1rbA37MHlgLnA+8CrgZWGl7m6S7ge8CPwBub9eJ7XMlzQAuAY6h8SThekkCuoEj\ngJXAocB9wGPAHf10KeBvJF0IPEcjqR43iHFFjIi8USOiQXbryl2MpFqt5nq93ukwIiIqRdK68iBf\nv8brcmJERERbeQFwHyStBGa37P6w7dWdiCciIraXJNYH20d2OoaIiOhflhMjIqKyksQiIqKyksQi\nIqKyksQiIqKyksQiIqKy8nRiTFpdy1d1OoRxK28EiaqY0DMxSaeW2mMbS0mY10n6oqR9yvFn+jjv\nAEl3lnO+I+n0MQ08IiIGZMLOxCQdCLwdWGB7i6Q9gB1tf3AAp38JeI/te0ql6LmjGWtERAzNRJ6J\nzQKesr0FwPZTtp+QtEbSb97HJelTZbZ2o6SeCpYvBZ4s5221fV9pe7qkSyTdIelBSUvHeEwREdFk\nIiex64C9JD0g6XOSDuqlzS5A3fa+wDeAvy37PwXcL2mlpBOaapJBo6r0ocCBwEck/c4ojiEiIvox\nYZOY7WeAhcAyGmVXLpd0XEuzbTxfEfpfaFSQxvZHgRqNRPg+4Nqmc75m+znbT9EoE7Oo9dqSlkmq\nS6p3d3eP3KAiIuK3TNh7YtBYCgTWAGskbQI+0O6UpnMfBi6Q9AWgW9JLWtv0sY3tFcAKaJRiGVr0\nERHRzoSdiUmaK2lO067eqjBPARaXz++jUUEaSYeXwpkAc4CtwM/K9jsl7VSS2sE0CnhGREQHTOSZ\n2HTgPEm7Ab8GHqKxtHhVU5tngUWSTgN+Aiwp+98PfErSz8u5x9jeWvLaRhrLiHsAH7P9xFgMJiIi\ntjdhk5jtdcDrezl0cFOb6X2ce3Q/XW+0fezwoouIiJEwYZNYRDt5K0VE9SWJDYLt0zsdQ0REPG/C\nPtgRERETX5JYRERUVpJYRERUVpJYRERUVpJYRERUVpJYRERUVpJYRERUVv6dWFRS1/JVnQ5hQss/\nBI+qyEwsIiIqa9InMUlHSLKkP+h0LBERMTiTPokB76VRguW9nQ4kIiIGZ1InMUnTaVRzPh44uuyb\nIulzkr4r6XpJ10haXI4tlPQNSeskrZY0q4PhR0RMepM6iQHvBK61/QDwU0kLgXcBXcA+NOqKHQgg\naQfgPGCx7YXAPwJn9dappGWS6pLq3d3doz+KiIhJarI/nfhe4NPl82Vlexpwpe1twI8k3VyOzwX2\nA64vxTGnAk/21qntFcAKgFqt5lGLPiJikpu0SUzSi4FDgVdLMo2kZGBlX6cA99o+cIxCjIiINibz\ncuJi4BLbr7DdZXsv4HvAfwDvLvfG9uT5StD3AzMl/WZ5UdK+nQg8IiIaJnMSey/bz7q+ArwMeBy4\nD/gXYD2w2fYvaSS+syXdA2wAXj924UZERCvZuWXTStJ0289IeglwF/BHtn80lL5qtZrr9frIBhgR\nMcFJWme71q7dpL0n1sbXJe0G7Ah8bKgJLCIiRleSWC9sH9zpGCIior3JfE8sIiIqLkksIiIqK0ks\nIiIqK0ksIiIqK0ksIiIqK0ksIiIqK0ksIiIqK/9ObILpWr6q0yHEBPDoJw/vdAgRA5KZWEREVFaS\nWEREVNa4SmKSTpV0r6SNkjZIet04iKlL0rc7HUdERGxv3NwTK3W63g4ssL1F0h40XsAbERHRq/E0\nE5sFPGV7C4Dtp2w/IWmhpG9IWidptaRZkmZIul/SXABJl0pa2lfHkp6RdE6Z5d0gaZGkNZIekfSO\n0qZL0q2S1pev7WqFSZpa+llbZosn9HG9ZZLqkurd3d0j8sOJiIjtjackdh2wl6QHJH1O0kGSdgDO\nAxbbXgj8I3CW7c3AXwIXSzoa2N32F/rpexfgJtv7Ak8DZwJvBY4EPlra/AR4q+0FwBLgM730czyN\nApn7A/sDSyXNbm1ke4Xtmu3azJkzB/2DiIiIgRk3y4mlCOVC4I3AIcDlNJLNfsD1kgCmAk+W9tdL\nOgr4LPCaNt3/Eri2fN4EbLH9K0mbgK6yfwfgfEnzga3A3r30cxgwT9Lisj0DmAN8b3CjjYiIkTBu\nkhiA7a3AGmBNSTB/Adxr+8DWtpKmAH8I/BzYHXi8n65/5edLWG8DepYst0nq+Rl8CPgxjYQ4BfhF\nL/0IONn26kEOLSIiRsG4WU6UNFfSnKZd84HvADPLQx9I2kHSvuX4h8rx9wH/VJYeh2MG8KTtbcD7\nacz6Wq0GTuq5lqS9Je0yzOtGRMQQjaeZ2HTgPEm7Ab8GHgKWASuAz0iaQSPef5D0a+CDwCLbT0u6\nBTgN+NthXP9zwFckHUtj6fHZXtp8kcby43o11je7gSOGcc0RlzctRMRkoudX2WI01Go11+v1TocR\nEVEpktbZrrVrN26WEyMiIgZrPC0nDpukO4EXtOx+v+1NnYgnIiJG14RKYrY7/pqqiIgYO1lOjIiI\nykoSi4iIykoSi4iIykoSi4iIykoSi4iIyppQTydORF3LV3U6hJiE8uaXqIrMxCIiorImVBKTtFXS\nBknflnSlpBf20/Z0SaeMZXwRETGyJlQSA56zPd/2fjRqiJ3Y6YAiImL0TLQk1uxW4FUAko6VtFHS\nPZIuaW0oaamkteX4V3pmcJKOKrO6e8qb8pG0r6S7yoxvY0v5mIiIGEMTMomVQpdvAzaV+mOnAYfa\nfg3wV72c8lXb+5fj3wGOL/s/Avy3sv8dZd+JwKdtzwdq9FKMU9IySXVJ9e7u7hEdW0REPG+iJbGd\nJW0A6sBjwEXAocCVtp8CsP0fvZy3n6RbSzXpY4Cewpu3AxdLWsrzRTLvAP6PpA8Dr7D9XGtntlfY\nrtmuzZw5cyTHFxERTSbaI/bPlRnSbzRqV7Z1MXCE7XskHQccDGD7REmvAw4H1klaaPtfy9vyDweu\nkXSC7ZtGcAwRETFAE20m1pubgKMkvQRA0ot7afMi4ElJO9CYiVHavtL2nbY/QqOK816Sfh94xPZn\ngK8B80Z9BBER0auJNhPbju17JZ0FfEPSVuBu4LiWZv8XuJNGorqTRlIDOKc8uCHgRuAe4MPA+yX9\nCvgR8PFRH0RERPRKtjsdw4RWq9Vcr9c7HUZERKVIWme71q7dZFhOjIiICSpJLCIiKitJLCIiKitJ\nLCIiKisPdowySd3A90egqz2Ap0agn/Ei4xnfMp7xbTKM5xW2274tIkmsIiTVB/KkTlVkPONbxjO+\nZTzPy3JiRERUVpJYRERUVpJYdazodAAjLOMZ3zKe8S3jKXJPLCIiKiszsYiIqKwksYiIqKwksXFK\n0oslXS/pwfJ99z7avVzSdZK+I+k+SV1jG+nADHQ8pe2ukh6XdP5YxjgYAxmPpPmS7pB0r6SNkpZ0\nItb+SPpjSfdLekjS8l6Ov0DS5eX4neP1v68eAxjP/yr/n2yUdKOkV3QizoFqN56mdu+WZEnj+rH7\ngYxH0nvK7+heSf/atlPb+RqHX8DfAcvL5+XA2X20WwO8tXyeDryw07EPZzzl+KeBfwXO73TcwxkP\nsDcwp3z+HeBJYLdOx94U31TgYeD3gR1plBrap6XNnwOfL5+PBi7vdNzDHM8hPf+PACdVfTyl3YuA\nW4BvAbVOxz3M388cGuWydi/bL23Xb2Zi49c7gS+Vz18CjmhtIGkfYJrt6wFsP2P752MX4qC0HQ+A\npIXAnsB1YxTXULUdj+0HbD9YPj8B/ARo+waCMbQIeMj2I7Z/CVxGY1zNmsd5FfBmDbBcege0HY/t\nm5v+H/kW8HtjHONgDOT3A/Ax4GzgF2MZ3BAMZDxLgc/a/k8A2z9p12mS2Pi1p+0ny+cf0fiDvdXe\nwM8kfVXS3ZLOkTR17EIclLbjkTQF+HvglLEMbIgG8vv5DUmLaPzt8+HRDmwQfhf4QdP242Vfr21s\n/xrYDLxkTKIbvIGMp9nxwL+PakTD03Y8khYAe9leNZaBDdFAfj97A3tLul3StyT9cbtOJ3xl5/FM\n0g3Ay3o5dGrzhm1L6u3fQkwD3gi8FngMuJxG1eqLRjbSgRmB8fw5cI3tx8fDX/ZHYDw9/cwCLgE+\nYHvbyEYZQyHpT4EacFCnYxmq8pe+c9m+Un2VTaOxpHgwjVnyLZJebftn/Z0QHWL7LX0dk/RjSbNs\nP1n+EOxtWv04sMH2I+WcfwMOoENJbATGcyDwRkl/TuP+3o6SnrHd5w3t0TQC40HSrsAq4FTb3xql\nUIfqh8BeTdu/V/b11uZxSdOAGcBPxya8QRvIeJD0Fhp/ETnI9pYxim0o2o3nRcB+wJryl76XAVdL\neoft8VhOfiC/n8eBO23/CviepAdoJLW1fXWa5cTx62rgA+XzB4Cv9dJmLbCbpJ77LIcC941BbEPR\ndjy2j7H9cttdNJYU/7lTCWwA2o5H0o7AShrjuGoMYxuotcAcSbNLrEfTGFez5nEuBm5yueM+DrUd\nj6TXAhcC7xjI/ZYO63c8tjfb3sN2V/l/5ls0xjUeExgM7L+3f6MxC0PSHjSWFx/pt9dOP7GSrz6f\n5HkJcCPwIHAD8OKyvwZ8sandW4GNwCbgYmDHTsc+nPE0tT+O8f10YtvxAH8K/ArY0PQ1v9Oxt4zj\nvwMP0LhXd2rZ91EafxgC7Ga6xLYAAABoSURBVARcCTwE3AX8fqdjHuZ4bgB+3PT7uLrTMQ9nPC1t\n1zCOn04c4O9HNJZI7yt/ph3drs+8dioiIiory4kREVFZSWIREVFZSWIREVFZSWIREVFZSWIREVFZ\nSWIREVFZSWIREVFZ/x8M4z1eVjtbgAAAAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
         }
       ]
     },
